Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,15 +52,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.46875\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.46875"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "bayes(0.15+0.85*0.20)"
+    "bayes(0.15, 0.15+0.85*0.20, 1.00)"
    ]
   },
   {
