Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
    ],
    "source": [
     "# Your solution P(2boys|older child is a boy)\n",
-    "bayes(0.5, 0.5, )"
+    "bayes(0.5, 0.5, 0.5)"
    ]
   },
   {
@@ -122,7 +122,7 @@
     }
    ],
    "source": [
-    "# Your solution P(2boys|1 of 2 children is a boy)"
+    "# Your solution P(2boys|1 of 2 children is a boy)\n"
    ]
   },
   {
