--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,8 @@
     }
    ],
    "source": [
-    "# Your solution P(Disease | positive test)"
+    "# Your solution P(Disease | positive test)\n",
+    "bayes(0)"
    ]
   },
   {
