--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,7 @@
    ],
    "source": [
     "# Your solution P(Disease | positive test)\n",
-    "bayes(0.01, )"
+    "bayes(0.01, 0.99*)"
    ]
   },
   {
