--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +154,14 @@
        "0.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your solution P(Disease | positive test)\n",
-    "bayes(0.01, 0.99*0.01+0.01*0.99, )"
+    "bayes(0.01, 0.99*0.01+0.01*0.99, 0.99)"
    ]
   },
   {
